# chemics

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  benchmarks.py  clean.sh  environment.yml  mkdocs.yml  move_sphinx_html.sh  pyproject.toml  readthedocs.yml  setup.py
.github/: FUNDING.yml
chemics/: __init__.py  atm_pressure.py  bed_expansion_factor.py  bfb.py  biomass_composition.py  bubble_diameter.py  bubble_fraction.py  bubble_rise_velocity.py  bubble_velocity.py  bubble_velocity_free.py  chemical_equation.py  choking_velocity.py  constants.py  conversions.py  devol_time.py  dimensionless_numbers.py  elements.py  emulsion.py  gas.py  gas_density.py  gas_heat_capacity.py  gas_mixture.py  gas_thermal_conductivity.py  gas_viscosity.py  geldart.py  liquid.py  liquid_heat_capacity.py  mass_transfer_correlations.py  minimum_fluidization_velocity.py  molecular_weight.py  prandtl_number.py  pressure_drop.py  proximate_analysis.py  proximate_bases.py  residence_time.py  rtd.py  terminal_velocity.py  transport_disengagement.py  transport_disengaging_height.py  transport_velocity.py  (+7 more)
docs/: .readthedocs.yaml  Makefile  atomic_elements.rst  bed_expansion_factor.rst  bedexp.md  bfb.html  bfb.md  bfb.rst  biomass_composition.rst  bubble_rise_velocity.rst  bubble_velocity.rst  bubble_velocity_free.rst  bubble_velocity_holland.rst  chemical_equation.rst  choking_velocity.rst  conf.py  contributing.rst  conversions.rst  devol_time.rst  dimensionless_numbers.rst  elements.rst  fluidization.html  gas-density.rst  gas-thermal-conductivity.rst  gas-viscosity.rst  gas.html  gas.md  gas.rst  gas_density.rst  gas_heat_capacity.rst  gas_mixture.rst  gas_thermal_conductivity.rst  gas_viscosity.rst  geldart.rst  genindex.html  index.html  index.md  index.rst  installation.rst  liquid.rst  (+24 more)
examples/: bed_expansion_factor.py  biomass_composition.py  bubble_velocity.py  chemical_equation.py  devol_time.py  gas_benchmarks.py  gas_density.py  gas_mixture.py  gas_properties.py  gas_thermal_conductivity.ipynb  gas_viscosity.py  geldart.py  (+16 more)
(+137 files in other folders)
