[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemics"
version = "23.11"
authors = [{name = "Gavin Wiggins"}]
description = "A Python package for chemical engineering"
readme = "README.md"
dependencies = ["matplotlib", "numpy", "pandas", "scipy"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wigging/chemics"
