[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemics"
version = "24.1"
authors = [{name = "Gavin Wiggins"}]
description = "A Python package for chemical engineering"
readme = "README.md"
dependencies = ["matplotlib", "numpy", "pandas", "scipy"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wigging/chemics"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501", "D"]
ignore = ["D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
